Html font tags are now in a separate css file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/default_tags.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Project Shop</title>
 </head>
@@ -21,7 +22,12 @@
 
                 <div class='title__container'>
                     <h2 class='title__directory'>Shop</h2>
-                    <a class='title__route'>HOME / SHOP</a>
+
+                    <div class='title__route'>
+                        <a href='#'>HOME</a>
+                        <p>&nbsp;/&nbsp;</p>
+                        <a href='#'>SHOP</a>
+                    </div>
                 </div>
 
                 <div class='sorting__container'>
