support for ie finished

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/default_tags.css">
-    <link rel="stylesheet" href="styles/ie_support.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/ie_style.css">
+    <link rel="stylesheet" href="styles/modern_style.css">
     <title>Project Shop</title>
 </head>
 
