Layout remade with the flexbox

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/default_tags.css">
-    <link rel="stylesheet" href="styles/ie_style.css">
-    <link rel="stylesheet" href="styles/modern_style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Project Shop</title>
 </head>
 
@@ -16,8 +15,8 @@
         <nav class='header__nav'></nav>
     </header>
 
-    <section class='shop__outer'>
-        <div class='shop__inner'>
+    <section class='shop__container'>
+        <div class='shop__content'>
 
             <main class='shop__left'>   
 
