Media queries finished, made left shop section responsive

--- a/index.html
+++ b/index.html
@@ -37,8 +37,18 @@
                         <option value="default">DEFAULT SORTING</option>
                     </select>
                 </div>
-
+                
                 <div class='items__container'>
+                    <div class='items__item'>
+                        <figure class='items__figure'>
+
+                        </figure>
+                    </div>
+                    <div class='items__item'>
+                        <figure class='items__figure'>
+
+                        </figure>
+                    </div>
                     <div class='items__item'>
                         <figure class='items__figure'>
 
