--- a/index.html
+++ b/index.html
@@ -39,55 +39,79 @@
                 </div>
                 
                 <div class='items__container'>
-                    <div class='items__item'>
-                        <figure class='items__figure'>
+                    <div class='items__content'>
 
-                        </figure>
-                    </div>
-                    <div class='items__item'>
-                        <figure class='items__figure'>
+                        <div class='items__item'>
+                            <div class='items__border'>
+                                <figure class='items__figure'>
 
-                        </figure>
-                    </div>
-                    <div class='items__item'>
-                        <figure class='items__figure'>
+                                </figure>
+                            </div>    
+                        </div>
+                        <div class='items__item'>
+                            <div class='items__border'>
+                                <figure class='items__figure'>
 
-                        </figure>
-                    </div>
-                    <div class='items__item'>
-                        <figure class='items__figure'>
+                                </figure>
+                            </div>    
+                        </div>
+                        <div class='items__item'>
+                            <div class='items__border'>
+                                <figure class='items__figure'>
 
-                        </figure>
-                    </div>
-                    <div class='items__item'>
-                        <figure class='items__figure'>
+                                </figure>
+                            </div>    
+                        </div>
+                        <div class='items__item'>
+                            <div class='items__border'>
+                                <figure class='items__figure'>
 
-                        </figure>
-                    </div>
-                    <div class='items__item'>
-                        <figure class='items__figure'>
+                                </figure>
+                            </div>    
+                        </div>
+                        <div class='items__item'>
+                            <div class='items__border'>
+                                <figure class='items__figure'>
 
-                        </figure>
-                    </div>
-                    <div class='items__item'>
-                        <figure class='items__figure'>
+                                </figure>
+                            </div>    
+                        </div>
+                        <div class='items__item'>
+                            <div class='items__border'>
+                                <figure class='items__figure'>
 
-                        </figure>
-                    </div>
-                    <div class='items__item'>
-                        <figure class='items__figure'>
+                                </figure>
+                            </div>    
+                        </div>
+                        <div class='items__item'>
+                            <div class='items__border'>
+                                <figure class='items__figure'>
 
-                        </figure>
-                    </div>
-                    <div class='items__item'>
-                        <figure class='items__figure'>
+                                </figure>
+                            </div>    
+                        </div>
+                        <div class='items__item'>
+                            <div class='items__border'>
+                                <figure class='items__figure'>
 
-                        </figure>
-                    </div>
-                    <div class='items__item'>
-                        <figure class='items__figure'>
+                                </figure>
+                            </div>
+                        </div>
+                        <div class='items__item'>
+                            <div class='items__border'>
+                                <figure class='items__figure'>
 
-                        </figure>
+                                </figure>
+                            </div>    
+                        </div>
+                        <div class='items__item'>
+                            <div class='items__border'>
+                                <figure class='items__figure'>
+
+                                </figure>
+                            </div>    
+                        </div>
+                        
                     </div>
                 </div>
             </main>
