added imagery, animations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/default_tags.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/animations.css">
     <title>Project Shop</title>
 </head>
 
@@ -41,79 +42,169 @@
                 <div class='items__container'>
                     <div class='items__content'>
 
-                        <div class='items__item'>
+                        <div class='items__item items__item--sale'>
                             <div class='items__border'>
                                 <figure class='items__figure'>
-
+                                    <img class='items__image' src="images/1.jpg" alt="Dirty dark hoodie">
                                 </figure>
+                                <div class='items__details'>
+                                    <h3 class='items__name' title='Flying Ninja'>Flying Ninja</h3>
+                                    <div class='items__price-container'>
+                                        <h3 class='items__price  items__price--standard'>15.00</h3>
+                                        <h3 class='items__price  items__price--sale'>12.00</h3>
+                                    </div>
+                                    <button class='items__button'>ADD TO CART</button>
+                                </div>
                             </div>    
                         </div>
-                        <div class='items__item'>
+            
+                        <div class='items__item items__item--sale'>
                             <div class='items__border'>
                                 <figure class='items__figure'>
-
+                                    <img class='items__image' src="images/2.jpg" alt="Red hoodie">
                                 </figure>
+                                <div class='items__details'>
+                                    <h3 class='items__name' title='Happy Ninja'>Happy Ninja</h3>
+                                    <div class='items__price-container'>
+                                        <h3 class='items__price  items__price--standard'>18.00</h3>
+                                        <h3 class='items__price  items__price--sale'>10.00</h3>
+                                    </div>
+                                    <button class='items__button'>ADD TO CART</button>
+                                </div>
                             </div>    
                         </div>
+
                         <div class='items__item'>
                             <div class='items__border'>
                                 <figure class='items__figure'>
-
+                                    <img class='items__image' src="images/3.jpg" alt="Alpha male hoodie">
                                 </figure>
+                                <div class='items__details'>
+                                    <h3 class='items__name' title='Happy Ninja'>Happy Ninja</h3>
+                                    <div class='items__price-container'>
+                                        <h3 class='items__price  items__price--standard'>35.00</h3>
+                                        <h3 class='items__price  items__price--sale'>15.00</h3>
+                                    </div>
+                                    <button class='items__button'>ADD TO CART</button>
+                                </div>
                             </div>    
                         </div>
+
                         <div class='items__item'>
                             <div class='items__border'>
                                 <figure class='items__figure'>
-
+                                    <img class='items__image' src="images/4.jpg" alt="Light grey hoodie">
                                 </figure>
+                                <div class='items__details'>
+                                    <h3 class='items__name' title='Happy Silhouette'>Ninja Silhouette</h3>
+                                    <div class='items__price-container'>
+                                        <h3 class='items__price  items__price--standard'>20.00</h3>
+                                        <h3 class='items__price  items__price--sale'>10.00</h3>
+                                    </div>
+                                    <button class='items__button'>ADD TO CART</button>
+                                </div>
                             </div>    
                         </div>
+
                         <div class='items__item'>
                             <div class='items__border'>
                                 <figure class='items__figure'>
-
+                                    <img class='items__image' src="images/5.jpg" alt="Yellow hoodie">
                                 </figure>
+                                <div class='items__details'>
+                                    <h3 class='items__name' title='Ninja Solhouette'>Ninja Solhouette</h3>
+                                    <div class='items__price-container'>
+                                        <h3 class='items__price  items__price--standard'>35.00</h3>
+                                        <h3 class='items__price  items__price--sale'>15.00</h3>
+                                    </div>
+                                    <button class='items__button'>ADD TO CART</button>
+                                </div>
                             </div>    
                         </div>
+
                         <div class='items__item'>
                             <div class='items__border'>
                                 <figure class='items__figure'>
-
+                                    <img class='items__image' src="images/6.jpg" alt="Grey hoodie">
                                 </figure>
+                                <div class='items__details'>
+                                    <h3 class='items__name' title='Patient Ninja'>Patient Ninja</h3>
+                                    <div class='items__price-container'>
+                                        <h3 class='items__price  items__price--standard'>35.00</h3>
+                                        <h3 class='items__price  items__price--sale'>15.00</h3>
+                                    </div>
+                                    <button class='items__button'>ADD TO CART</button>
+                                </div>
                             </div>    
                         </div>
+
                         <div class='items__item'>
                             <div class='items__border'>
                                 <figure class='items__figure'>
-
+                                    <img class='items__image' src="images/7.jpg" alt="Awesome hoodie">
                                 </figure>
+                                <div class='items__details'>
+                                    <h3 class='items__name' title='Premium Quality'>Premium Quality</h3>
+                                    <div class='items__price-container'>
+                                        <h3 class='items__price  items__price--standard'>20.00</h3>
+                                        <h3 class='items__price  items__price--sale'>5.00</h3>
+                                    </div>
+                                    <button class='items__button'>ADD TO CART</button>
+                                </div>
                             </div>    
                         </div>
-                        <div class='items__item'>
+
+                        <div class='items__item items__item--sale'>
                             <div class='items__border'>
                                 <figure class='items__figure'>
-
+                                    <img class='items__image' src="images/8.jpg" alt="Black hoodie">
                                 </figure>
+                                <div class='items__details'>
+                                    <h3 class='items__name' title='Premium Quality'>Premium Quality</h3>
+                                    <div class='items__price-container'>
+                                        <h3 class='items__price  items__price--standard'>15.00</h3>
+                                        <h3 class='items__price  items__price--sale'>12.00</h3>
+                                    </div>
+                                    <button class='items__button'>ADD TO CART</button>
+                                </div>
                             </div>
                         </div>
+
                         <div class='items__item'>
                             <div class='items__border'>
                                 <figure class='items__figure'>
-
+                                    <img class='items__image' src="images/9.jpg" alt="Dark grey hoodie">
                                 </figure>
+                                <div class='items__details'>
+                                    <h3 class='items__name' title='Qualified Ninja'>Qualified Ninja</h3>
+                                    <div class='items__price-container'>
+                                        <h3 class='items__price  items__price--standard'>100.00</h3>
+                                        <h3 class='items__price  items__price--sale'>50.00</h3>
+                                    </div>
+                                    <button class='items__button'>ADD TO CART</button>
+                                </div>
                             </div>    
                         </div>
-                        <div class='items__item'>
+
+                        <div class='items__item items__item--sale'>
                             <div class='items__border'>
                                 <figure class='items__figure'>
-
+                                    <img class='items__image' src="images/10.jpg" alt="Anime hoodie">
                                 </figure>
+                                <div class='items__details'>
+                                    <h3 class='items__name' title='Kawaii Ninja'>Kawaii Ninja</h3>
+                                    <div class='items__price-container'>                                     
+                                        <h3 class='items__price  items__price--standard'>100.00</h3>
+                                        <h3 class='items__price  items__price--sale'>80.00</h3>  
+                                    </div>
+                                    <button class='items__button'>ADD TO CART</button>
+                                </div>
                             </div>    
                         </div>
                         
                     </div>
                 </div>
+
             </main>
 
             <aside class='shop__right'>
