Code clean up / animation fixes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class='items__content'>
 
                         <div class='items__item items__item--sale'>
-                            <div class='items__border'>
+                            <div >
                                 <figure class='items__figure'>
                                     <img class='items__image' src="images/1.jpg" alt="Dirty dark hoodie">
                                 </figure>
@@ -66,7 +66,7 @@
                         </div>
             
                         <div class='items__item items__item--sale'>
-                            <div class='items__border'>
+                            <div >
                                 <figure class='items__figure'>
                                     <img class='items__image' src="images/2.jpg" alt="Red hoodie">
                                 </figure>
@@ -82,7 +82,7 @@
                         </div>
 
                         <div class='items__item'>
-                            <div class='items__border'>
+                            <div >
                                 <figure class='items__figure'>
                                     <img class='items__image' src="images/3.jpg" alt="Alpha male hoodie">
                                 </figure>
@@ -98,7 +98,7 @@
                         </div>
 
                         <div class='items__item'>
-                            <div class='items__border'>
+                            <div >
                                 <figure class='items__figure'>
                                     <img class='items__image' src="images/4.jpg" alt="Light grey hoodie">
                                 </figure>
@@ -114,7 +114,7 @@
                         </div>
 
                         <div class='items__item'>
-                            <div class='items__border'>
+                            <div >
                                 <figure class='items__figure'>
                                     <img class='items__image' src="images/5.jpg" alt="Yellow hoodie">
                                 </figure>
@@ -130,7 +130,7 @@
                         </div>
 
                         <div class='items__item'>
-                            <div class='items__border'>
+                            <div >
                                 <figure class='items__figure'>
                                     <img class='items__image' src="images/6.jpg" alt="Grey hoodie">
                                 </figure>
@@ -146,7 +146,7 @@
                         </div>
 
                         <div class='items__item'>
-                            <div class='items__border'>
+                            <div >
                                 <figure class='items__figure'>
                                     <img class='items__image' src="images/7.jpg" alt="Awesome hoodie">
                                 </figure>
@@ -162,7 +162,7 @@
                         </div>
 
                         <div class='items__item items__item--sale'>
-                            <div class='items__border'>
+                            <div >
                                 <figure class='items__figure'>
                                     <img class='items__image' src="images/8.jpg" alt="Black hoodie">
                                 </figure>
@@ -178,7 +178,7 @@
                         </div>
 
                         <div class='items__item'>
-                            <div class='items__border'>
+                            <div >
                                 <figure class='items__figure'>
                                     <img class='items__image' src="images/9.jpg" alt="Dark grey hoodie">
                                 </figure>
@@ -194,7 +194,7 @@
                         </div>
 
                         <div class='items__item items__item--sale'>
-                            <div class='items__border'>
+                            <div >
                                 <figure class='items__figure'>
                                     <img class='items__image' src="images/10.jpg" alt="Anime hoodie">
                                 </figure>
