Final animation touches

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <div class='aside__break'></div>
                         <div class='aside__texts-container'>
                             <p class='aside__text' title='Honest Qualities'>Honest Qualities</p>
-                            <p class='aside__text' title='Breadcause you're worth it'>Breadcause you're worth it</p>
+                            <p class='aside__text' title="Breadcause you're worth it">Breadcause you're worth it</p>
                             <p class='aside__text' title='Your tray of goodies'>Your tray of goodies</p>
                             <p class='aside__text' title='Are Carbs for you?'>Are Carbs for you?</p>
                             <p class='aside__text' title='Healthy Bread Solutions'>Healthy Bread Solutions</p>
