new page added, new item button

--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
     <header class='header__container'>
         <nav class='header__nav'>
             <ul class='nav__container'>
-                <li class='nav__item'>SHOP</li>
-                <li class='nav__item'>CART</li>
-                <li class='nav__item'>ABOUT</li>
-                <li class='nav__item'>CONTACTS</li>
+                <li class='nav__item'>
+                    <a class='nav__link' href='#'>HOME</a>
+                </li>
+                <li class='nav__item'>
+                    <a class='nav__link' href='index.html'>SHOP</a>
+                </li>
+                <li class='nav__item'>
+                    <a class='nav__link' href='cart.html'>CART</a>
+                </li>
+                <li class='nav__item'>
+                    <a class='nav__link' href='#'>ABOUT</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -208,6 +216,10 @@
                                 </div>
                             </div>    
                         </div>
+
+                        <div class='admin__container'>
+                            <button class='admin__new-item'>NEW ITEM</button>
+                        </div>
                         
                     </div>
                 </div>
@@ -254,6 +266,7 @@
                 </div>
 
             </aside>
+
         </div>
     </section>
 
