front-end: admin form added, back-end: get / post end-poinst

--- a/cart.html
+++ b/cart.html
@@ -41,9 +41,9 @@
                     <h2 class='title__directory'>Cart</h2>
 
                     <div class='title__route'>
-                        <a href='#'>HOME</a>
+                        <a class='title__link' href='#'>HOME</a>
                         <p>&nbsp;/&nbsp;</p>
-                        <a href='#'>CART</a>
+                        <a class='title__link' href='#'>CART</a>
                     </div>
                 </div>
 
@@ -90,7 +90,7 @@
                         </div>
 
                         <div class='admin__container'>
-                            <button class='admin__new-item'>NEW ITEM</button>
+                            <a class='admin__new-item' href='admin.html'>NEW ITEM</a>
                         </div>
                         
                     </div>
