--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <h2 class='title__directory'>Shop</h2>
 
                     <div class='title__route'>
-                        <a href='#'>HOME</a>
+                        <a class='title__link' href='#'>HOME</a>
                         <p>&nbsp;/&nbsp;</p>
-                        <a href='#'>SHOP</a>
+                        <a class='title__link' href='#'>SHOP</a>
                     </div>
                 </div>
 
@@ -57,168 +57,10 @@
                 <div class='items__container'>
                     <div class='items__content'>
 
-                        <div class='items__item items__item--sale'>
-                            <div >
-                                <figure class='items__figure'>
-                                    <img class='items__image' src="images/1.jpg" alt="Dirty dark hoodie">
-                                </figure>
-                                <div class='items__details'>
-                                    <h3 class='items__name' title='Flying Ninja'>Flying Ninja</h3>
-                                    <div class='items__price-container'>
-                                        <h3 class='items__price  items__price--standard'>15.00</h3>
-                                        <h3 class='items__price  items__price--sale'>12.00</h3>
-                                    </div>
-                                    <button class='items__button'>ADD TO CART</button>
-                                </div>
-                            </div>    
-                        </div>
-            
-                        <div class='items__item items__item--sale'>
-                            <div >
-                                <figure class='items__figure'>
-                                    <img class='items__image' src="images/2.jpg" alt="Red hoodie">
-                                </figure>
-                                <div class='items__details'>
-                                    <h3 class='items__name' title='Happy Ninja'>Happy Ninja</h3>
-                                    <div class='items__price-container'>
-                                        <h3 class='items__price  items__price--standard'>18.00</h3>
-                                        <h3 class='items__price  items__price--sale'>10.00</h3>
-                                    </div>
-                                    <button class='items__button'>ADD TO CART</button>
-                                </div>
-                            </div>    
-                        </div>
-
-                        <div class='items__item'>
-                            <div >
-                                <figure class='items__figure'>
-                                    <img class='items__image' src="images/3.jpg" alt="Alpha male hoodie">
-                                </figure>
-                                <div class='items__details'>
-                                    <h3 class='items__name' title='Happy Ninja'>Happy Ninja</h3>
-                                    <div class='items__price-container'>
-                                        <h3 class='items__price  items__price--standard'>35.00</h3>
-                                        <h3 class='items__price  items__price--sale'>15.00</h3>
-                                    </div>
-                                    <button class='items__button'>ADD TO CART</button>
-                                </div>
-                            </div>    
-                        </div>
-
-                        <div class='items__item'>
-                            <div >
-                                <figure class='items__figure'>
-                                    <img class='items__image' src="images/4.jpg" alt="Light grey hoodie">
-                                </figure>
-                                <div class='items__details'>
-                                    <h3 class='items__name' title='Happy Silhouette'>Ninja Silhouette</h3>
-                                    <div class='items__price-container'>
-                                        <h3 class='items__price  items__price--standard'>20.00</h3>
-                                        <h3 class='items__price  items__price--sale'>10.00</h3>
-                                    </div>
-                                    <button class='items__button'>ADD TO CART</button>
-                                </div>
-                            </div>    
-                        </div>
-
-                        <div class='items__item'>
-                            <div >
-                                <figure class='items__figure'>
-                                    <img class='items__image' src="images/5.jpg" alt="Yellow hoodie">
-                                </figure>
-                                <div class='items__details'>
-                                    <h3 class='items__name' title='Ninja Solhouette'>Ninja Solhouette</h3>
-                                    <div class='items__price-container'>
-                                        <h3 class='items__price  items__price--standard'>35.00</h3>
-                                        <h3 class='items__price  items__price--sale'>15.00</h3>
-                                    </div>
-                                    <button class='items__button'>ADD TO CART</button>
-                                </div>
-                            </div>    
-                        </div>
-
-                        <div class='items__item'>
-                            <div >
-                                <figure class='items__figure'>
-                                    <img class='items__image' src="images/6.jpg" alt="Grey hoodie">
-                                </figure>
-                                <div class='items__details'>
-                                    <h3 class='items__name' title='Patient Ninja'>Patient Ninja</h3>
-                                    <div class='items__price-container'>
-                                        <h3 class='items__price  items__price--standard'>35.00</h3>
-                                        <h3 class='items__price  items__price--sale'>15.00</h3>
-                                    </div>
-                                    <button class='items__button'>ADD TO CART</button>
-                                </div>
-                            </div>    
-                        </div>
-
-                        <div class='items__item'>
-                            <div >
-                                <figure class='items__figure'>
-                                    <img class='items__image' src="images/7.jpg" alt="Awesome hoodie">
-                                </figure>
-                                <div class='items__details'>
-                                    <h3 class='items__name' title='Premium Quality'>Premium Quality</h3>
-                                    <div class='items__price-container'>
-                                        <h3 class='items__price  items__price--standard'>20.00</h3>
-                                        <h3 class='items__price  items__price--sale'>5.00</h3>
-                                    </div>
-                                    <button class='items__button'>ADD TO CART</button>
-                                </div>
-                            </div>    
-                        </div>
-
-                        <div class='items__item items__item--sale'>
-                            <div >
-                                <figure class='items__figure'>
-                                    <img class='items__image' src="images/8.jpg" alt="Black hoodie">
-                                </figure>
-                                <div class='items__details'>
-                                    <h3 class='items__name' title='Premium Quality'>Premium Quality</h3>
-                                    <div class='items__price-container'>
-                                        <h3 class='items__price  items__price--standard'>15.00</h3>
-                                        <h3 class='items__price  items__price--sale'>12.00</h3>
-                                    </div>
-                                    <button class='items__button'>ADD TO CART</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class='items__item'>
-                            <div >
-                                <figure class='items__figure'>
-                                    <img class='items__image' src="images/9.jpg" alt="Dark grey hoodie">
-                                </figure>
-                                <div class='items__details'>
-                                    <h3 class='items__name' title='Qualified Ninja'>Qualified Ninja</h3>
-                                    <div class='items__price-container'>
-                                        <h3 class='items__price  items__price--standard'>100.00</h3>
-                                        <h3 class='items__price  items__price--sale'>50.00</h3>
-                                    </div>
-                                    <button class='items__button'>ADD TO CART</button>
-                                </div>
-                            </div>    
-                        </div>
-
-                        <div class='items__item items__item--sale'>
-                            <div >
-                                <figure class='items__figure'>
-                                    <img class='items__image' src="images/10.jpg" alt="Anime hoodie">
-                                </figure>
-                                <div class='items__details'>
-                                    <h3 class='items__name' title='Kawaii Ninja'>Kawaii Ninja</h3>
-                                    <div class='items__price-container'>                                     
-                                        <h3 class='items__price  items__price--standard'>100.00</h3>
-                                        <h3 class='items__price  items__price--sale'>80.00</h3>  
-                                    </div>
-                                    <button class='items__button'>ADD TO CART</button>
-                                </div>
-                            </div>    
-                        </div>
+                        <!-- js generated content -->
 
                         <div class='admin__container'>
-                            <button class='admin__new-item'>NEW ITEM</button>
+                            <a class='admin__new-item' href='admin.html'>NEW ITEM</a>
                         </div>
                         
                     </div>
@@ -270,6 +112,7 @@
         </div>
     </section>
 
+    <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
