--- a/public/admin.html
+++ b/public/admin.html
@@ -73,7 +73,7 @@
         </section>
         
     </section>
-    <script type="text/javascript" src="admin.js"></script>
+    <script type="text/javascript" src="js/admin.js"></script>
 </body>
 
 </html>
