--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
         </div>
     </section>
 
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
