post and put endpoints

--- a/public/admin.html
+++ b/public/admin.html
@@ -65,15 +65,16 @@
                     </div>
 
                     <button class='form__button' type="submit">SAVE</button>
-
-                </form>
-            
+                </form>       
 
             </div>
         </section>
         
     </section>
+
+    <script type="text/javascript" src="js/requests.js"></script>
     <script type="text/javascript" src="js/admin.js"></script>
+
 </body>
 
 </html>
