--- a/public/cart.html
+++ b/public/cart.html
@@ -55,7 +55,7 @@
                 </div>
                 
                 <div class='items__container'>
-                    <div class='items__content'>
+                    <div id='items_content' class='items__content'>
 
                         <div class='items__item items__item--sale'>
                             <div >
