--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                 </div>
                 
                 <div class='items__container'>
-                    <div class='items__content'>
+                    <div id='items_content' class='items__content'>
 
                         <!-- js generated content -->
 
@@ -112,7 +112,9 @@
         </div>
     </section>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/requests.js"></script>
+    <script type="text/javascript" src="js/content.js"></script>
+    
 </body>
 
 </html>
